White space appeared to the right was fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,6 +326,8 @@ body main h1 {
   z-index: -1;
   flex-direction: column;
   height: 87vh;
+  /* https://www.quora.com/Why-do-I-have-random-white-space-appearing-to-the-right-of-the-web-page-outside-of-body-tags */
+  overflow-x: hidden;
 }
 @keyframes rightToLeft {
   0% {
